# pregresql

./: CMakeLists.txt  Makefile  backup.txt  main.cpp
include/: Executor.hpp  Page.hpp  Parser.hpp  Row.hpp  Schema.hpp  Statements.hpp  StorageManager.hpp  Table.hpp  TableFile.hpp  utils.hpp
src/: Executor.cpp  Page.cpp  Parser.cpp  Row.cpp  Schema.cpp  StorageManager.cpp  Table.cpp  TableFile.cpp
tests/: testMain.cpp  testUtils.hpp  test_main.cpp
tests/golden/: people.tbl
